--- a/Toranj-front/login/html/welcome.html
+++ b/Toranj-front/login/html/welcome.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<link rel="stylesheet" href="Toranj-front/css/welcome.css">
+<link rel="stylesheet"  type="text/css" href="/css/welcome.css">
+<script src="js/login.js"></script>
 <title>Insert title here</title>
 </head>
 <body>
@@ -15,23 +16,29 @@
           <div class="row">
             <div class="col-md-9 col-lg-8 mx-auto">
               <h3 class="login-heading mb-4">Welcome!</h3>
-              <form>
+
+              <form id="LoginForm" onsubmit="return false">
+
                 <div class="form-label-group">
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                  <input type="email" id="username" name="username" class="form-control" placeholder="Email address" required autofocus>
                   <label for="inputEmail">Email address</label>
                 </div>
 
                 <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
                   <label for="inputPassword">Password</label>
                 </div>
 
-                <div class="custom-control custom-checkbox mb-3">
+             <!--  <div class="custom-control custom-checkbox mb-3">
                   <input type="checkbox" class="custom-control-input" id="customCheck1">
                   <label class="custom-control-label" for="customCheck1">Remember password</label>
-                </div>
+                </div> --> 
+                <div id=LoginButtonDiv>
                 <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Sign in</button>
+                </div>
               </form>
+
+
             </div>
           </div>
         </div>
