--- a/Toranj-front/resgistration/registration.html
+++ b/Toranj-front/resgistration/registration.html
@@ -13,15 +13,15 @@ PARA CALENDARIO: https://github.com/dmuy/DCalendar
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 
 
     <title>Registration Form</title>
 
     <!-- Bootstrap -->
-    <link href="/css/registration.css" rel="stylesheet">
+    <link href="registration.css" rel="stylesheet">
     <link href="css/dcalendar.picker.css" rel="stylesheet">
     <style type="text/css">
 
