--- a/Toranj-front/resgistration/registration.html
+++ b/Toranj-front/resgistration/registration.html
@@ -21,7 +21,7 @@ PARA CALENDARIO: https://github.com/dmuy/DCalendar
     <title>Registration Form</title>
 
     <!-- Bootstrap -->
-    <link href="registration.css" rel="stylesheet">
+    <link href="calendar.css" rel="stylesheet">
     <link href="css/dcalendar.picker.css" rel="stylesheet">
     <style type="text/css">
 
