cambios en register

--- a/Toranj-front/login/welcome.html
+++ b/Toranj-front/login/welcome.html
@@ -7,8 +7,8 @@
   <script language="JavaScript" src="welcome.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
-  <!--  jQuery library
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/4.2.1/jquery.min.js"></script> -->
+  jQuery library
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/4.2.1/jquery.min.js"></script> 
 
   <!-- Latest compiled JavaScript -->
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script> -->
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+  <main>
+    
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
@@ -29,17 +31,22 @@
 
                 <form id="loginForm" onsubmit="return false">
 
+                  <div class="row">
                   <div class="form-label-group">
                     <input type="email" id="username" name="username" class="form-control" placeholder="Email address"
                       required autofocus>
                     <label for="inputEmail">Email address</label>
                   </div>
+                </div>
 
-                  <div class="form-label-group">
+                <div class="row">
+                  <div class="form-label-group" style="z-index:10;">
                     <input type="password" id="password" name="password" class="form-control" placeholder="Password"
                       required>
+                    
                     <label for="inputPassword">Password</label>
                   </div>
+                </div>
 
                   <!--  <div class="custom-control custom-checkbox mb-3">
                   <input type="checkbox" class="custom-control-input" id="customCheck1">
@@ -51,7 +58,6 @@
                   </div>
                 </form>
 
-
               </div>
             </div>
           </div>
@@ -60,5 +66,5 @@
     </div>
   </div>
 </body>
-
+</main>
 </html>
