--- a/Toranj-front/resgistration/registration.html
+++ b/Toranj-front/resgistration/registration.html
@@ -26,6 +26,7 @@ https://formden.com/blog/date-picker -->
                         <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
                         <h3>Toranj</h3>
                         <p>Don't forget to put all data. Our internal departments will much appreciate it!</p>
+                        <input type="submit" name="" value="Go to Main"/><br/>
                     </div>
                     <div class="col-md-9 register-right">
                         <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
@@ -48,11 +49,10 @@ https://formden.com/blog/date-picker -->
                                             <input type="text" class="form-control" placeholder="Last Name " value="" />
                                         </div>
                                         <div class="form-group">
-                                            <select class="form-control">
+                                            <select id="selectOffice" class="form-control">
                                                 <option class="hidden"  selected disabled>Please select Office</option>
                                                 <option>What is your Birthdate?</option>
-                                                <option>What is Your old Phone Number</option>
-                                                <option>What is your Pet Name?</option>
+                
                                             </select>
                                         </div>
                                         <div class="form-group">   
