funciona login e index

--- a/Toranj-front/login/welcome.html
+++ b/Toranj-front/login/welcome.html
@@ -7,7 +7,7 @@
   <script language="JavaScript" src="welcome.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
-  jQuery library
+  <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/4.2.1/jquery.min.js"></script> 
 
   <!-- Latest compiled JavaScript -->
