--- a/Toranj-front/global/index.html
+++ b/Toranj-front/global/index.html
@@ -99,10 +99,10 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
           <div class="card-body-icon">
             <i class="fas fa-fw fa-list"></i>
           </div>
-          <div class="mr-5">Total Employees</div>
+          <div class="mr-5" onload="totalEmployee()" >Total Employees</div>
         </div>
          <a class="card-footer text-white clearfix small z-1" href="#">
-          <span class="float-left">View Details</span>
+          <label id="tEmployee" class="float-left"></label>
           <span class="float-right">
             <i class="fas fa-angle-right"></i>
           </span>
@@ -118,7 +118,7 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
           <div class="mr-5">Total Laptops</div>
         </div>
         <a class="card-footer text-white clearfix small z-1" href="#">
-          <span class="float-left">View Details</span>
+          <span id="tLaptop" class="float-left"></span>
           <span class="float-right">
             <i class="fas fa-angle-right"></i>
           </span>
@@ -134,7 +134,7 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
           <div class="mr-5">Total Software</div>
         </div>
         <a class="card-footer text-white clearfix small z-1" href="#">
-          <span class="float-left">View Details</span>
+          <span id="tSoftware" class="float-left"></span>
           <span class="float-right">
             <i class="fas fa-angle-right"></i>
           </span>
@@ -164,7 +164,7 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
         <div class="card mb-3">
           <div class="card-header">
             <i class="fas fa-chart-pie"></i>
-            Employees</div>
+            Position</div>
           <div class="card-body">
             <canvas id="myPieChart" width="100%" height="100"></canvas>
           </div>
@@ -187,51 +187,10 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
               <th>Surname</th>
               <th>Office</th>
               <th>Position</th>
+              <th>Extra package</th>
               <th>Start date</th>
-              <th>Salary</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Tiger Nixon</td>
-              <td>System Architect</td>
-              <td>Edinburgh</td>
-              <td>61</td>
-              <td>2011/04/25</td>
-              <td>$320,800</td>
-            </tr>
-            <tr>
-              <td>Garrett Winters</td>
-              <td>Accountant</td>
-              <td>Tokyo</td>
-              <td>63</td>
-              <td>2011/07/25</td>
-              <td>$170,750</td>
-            </tr>
-            <tr>
-              <td>Ashton Cox</td>
-              <td>Junior Technical Author</td>
-              <td>San Francisco</td>
-              <td>66</td>
-              <td>2009/01/12</td>
-              <td>$86,000</td>
-            </tr>
-            <tr>
-              <td>Cedric Kelly</td>
-              <td>Senior Javascript Developer</td>
-              <td>Edinburgh</td>
-              <td>22</td>
-              <td>2012/03/29</td>
-              <td>$433,060</td>
-            </tr>
-            <tr>
-              <td>Airi Satou</td>
-              <td>Accountant</td>
-              <td>Tokyo</td>
-              <td>33</td>
-              <td>2008/11/28</td>
-              <td>$162,700</td>
-            </tr>
+              <th>Comment</th>
+          
 
           </tbody>
         </table>
@@ -283,6 +242,7 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
     </div>
   </div>
 
+  <script type="text/javascript" src="js/global.js"></script>
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -298,14 +258,7 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin.min.js"></script>
 
-  <!-- Demo scripts for this page-->
-  <script src="js/demo/datatables-demo.js"></script>
-  <script src="js/demo/chart-area-demo.js"></script>
 
-  <!-- Demo scripts for this page-->
-  <script src="js/demo/chart-area-demo.js"></script>
-  <script src="js/demo/chart-bar-demo.js"></script>
-  <script src="js/demo/chart-pie-demo.js"></script>
 
 
 </body>
