--- a/Toranj-front/global/index.html
+++ b/Toranj-front/global/index.html
@@ -70,7 +70,7 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
   <!-- Breadcrumbs-->
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
-      <a href="#">Request Material</a>
+      <a href="registration.html">Request Material</a>
     </li>
   <!--   <li class="breadcrumb-item active">Overview</li> -->
   </ol>
@@ -236,7 +236,7 @@ PARA MAPS https://www.youtube.com/watch?v=Zxf1mnP5zcw
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <button class="btn btn-primary" onclick="goodbye()">Logout</button>
         </div>
       </div>
     </div>
